manifests/ingress/ingress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: ingress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
